--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.7.8"
+    "nodemailer": "^6.7.8",
+    "socket.io": "^4.8.1"
   }
 }
